# proyecto-final-optimus

./: .gitignore  README.md
proyecto_final/: package.xml  setup.cfg  setup.py
proyecto_final/config/: waypoints.yaml  waypoints_sim.yaml
proyecto_final/launch/: delivery.launch.py  delivery_real.launch.py  delivery_sim.launch.py  nav2_clase.launch.py
proyecto_final/maps/: clase.pgm  clase.yaml
proyecto_final/proyecto_final/: delivery_node.py
